--- a/src/assets/default.scss
+++ b/src/assets/default.scss
@@ -1,12 +1,13 @@
-  html {
-    font-size: calc(100vw / 10) !important;
-  }
+@import './variables.scss';
+html {
+  font-size: calc(100vw / 10) !important;
+}
 
-  body {
-    font-size: 16px !important;
-  }
+body {
+  font-size: 16px !important;
+}
 
-  * {
-    box-sizing: border-box;
-  }
-
+* {
+  box-sizing: border-box;
+  text-decoration-line: none;
+}
